--- a/Cole Shegan/Capstone_Code.Rmd
+++ b/Cole Shegan/Capstone_Code.Rmd
@@ -12,3 +12,83 @@ library(broom)
 library(hockeyR)
 ```
 
+
+
+## Thoughts on measuring consistency
+
+
+- Measure the difference of playing statistics season-over-season
+- Weight the metrics differently based on importance
+  - consistency score will have more consistent players near 0 & inconsistent players much greater than 0
+- playing metrics will have to be per game or per 60 measures for unbiased information
+
+
+- Use pivot_wider function to increase number of columns in order to take the differences between playing metrics
+
+
+
+```{r}
+basic_2023_24 <- read_csv("Data/Basic Stats/basic_stats_23_24.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2023)
+
+basic_2022_23 <- read_csv("Data/Basic Stats/basic_stats_22_23.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2022)
+
+basic_2021_22 <- read_csv("Data/Basic Stats/basic_stats_21_22.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2021)
+
+basic_2020_21 <- read_csv("Data/Basic Stats/basic_stats_20_21.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2020)
+
+basic_2019_20 <- read_csv("Data/Basic Stats/basic_stats_19_20.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2019)
+
+basic_2018_19 <- read_csv("Data/Basic Stats/basic_stats_18_19.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2018)
+
+basic_2017_18 <- read_csv("Data/Basic Stats/basic_stats_17_18.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2017)
+
+basic_2016_17 <- read_csv("Data/Basic Stats/basic_stats_16_17.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |> mutate(start_year = 2016)
+```
+
+
+
+```{r}
+basic_df1 <- full_join(basic_2023_24, basic_2022_23)
+basic_df2 <- full_join(basic_2021_22, basic_2020_21)
+basic_df3 <- full_join(basic_2019_20, basic_2018_19)
+basic_df4 <- full_join(basic_2017_18, basic_2016_17)
+
+basic_df5 <- full_join(basic_df1, basic_df2)
+basic_df6 <- full_join(basic_df3, basic_df4)
+
+basic_df <- full_join(basic_df5, basic_df6)
+
+long_basic_df <- basic_df |> 
+  pivot_wider(id_cols = c(Player, PlayerID), values_from = c(G, A, PTS, `+/-`, `S%`, PS), names_from = start_year)
+```
+
+
+
+```{r}
+long_basic_df <- long_basic_df %>% 
+  unnest() %>% 
+  replace(. == "NULL", NA) %>%
+  mutate(across(G_2023:PS_2016, ~replace_na(.x, 0)))
+
+long_basic_df <- long_basic_df |> 
+  mutate(Gdiff_23_22 = abs(G_2023 - G_2022), 
+         Gdiff_22_21 = abs(G_2022 - G_2021), 
+         Gdiff_21_20 = abs(G_2021 - G_2020),
+         Gdiff_20_19 = abs(G_2020 - G_2019),
+         Gdiff_19_18 = abs(G_2019 - G_2018),
+         Gdiff_18_17 = abs(G_2018 - G_2017),
+         Gdiff_17_16 = abs(G_2017 - G_2016)
+         ) |> 
+  group_by(Player, PlayerID) |> 
+  summarise(total_Gdiff = sum(Gdiff_23_22, Gdiff_22_21, Gdiff_21_20, Gdiff_20_19, Gdiff_19_18, Gdiff_18_17, Gdiff_17_16))
+```
+
+
