--- a/Celine Su/Checkpoint 1 Thoughts.qmd
+++ b/Celine Su/Checkpoint 1 Thoughts.qmd
@@ -20,61 +20,276 @@ author: "Celine, Cole"
 
 ### Basic Statistics 
 
+```{r}
+library(tidyverse)
+library(broom)
+```
+
+
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+
+basic_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_23_24.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2023)
+
+basic_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_22_23.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2022)
+
+basic_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_21_22.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2021)
+
+basic_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_20_21.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2020)
+
+basic_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_19_20.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2019)
+
+basic_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_18_19.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2018)
+
+basic_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_17_18.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2017)
+
+basic_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_16_17.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2016)
+
+```
+
+
+```{r}
+# combined basic stats
+basic_df <- rbind(basic_2023_24, basic_2022_23, basic_2021_22, basic_2020_21, basic_2021_22, 
+                     basic_2020_21, basic_2019_20, basic_2018_19, basic_2017_18, basic_2016_17)
+```
+
+
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+
+long_basic_df <- basic_df |> 
+  pivot_wider(id_cols = c(Player, PlayerID), 
+              values_from = c(G, A, PTS, `+/-`, `S%`, PS), 
+              names_from = start_year)
+
+long_basic_df <- long_basic_df %>% 
+  unnest() %>% 
+  replace(. == "NULL", NA)
+  # mutate(across(G_2023:PS_2016, ~replace_na(.x, 0)))
+
+long_basic_df <- long_basic_df |> 
+  unique()
+```
+
+
+
+### Miscellaneous Statistics
+
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+
+misc_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_23_24.csv") |> 
+  mutate(start_year = 2023)
+
+misc_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_22_23.csv") |>
+  mutate(start_year = 2022)
+
+misc_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_21_22.csv") |> 
+  mutate(start_year = 2021)
+
+misc_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_20_21.csv") |> 
+  mutate(start_year = 2020)
+
+misc_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_19_20.csv") |> 
+  mutate(start_year = 2019)
+
+misc_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_18_19.csv") |> 
+  mutate(start_year = 2018)
+
+misc_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_17_18.csv") |> 
+  mutate(start_year = 2017)
+
+misc_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_16_17.csv") |> 
+  mutate(start_year = 2016)
+```
+
+
+```{r}
+misc_df <- rbind(misc_2023_24, misc_2022_23, misc_2021_22, misc_2020_21, misc_2019_20,
+                 misc_2018_19, misc_2017_18, misc_2016_17)
+```
+
+
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
+long_misc_df <- misc_df |> 
+  filter(Pos != "G") |> 
+  pivot_wider(id_cols = c(Player), 
+              values_from = c(`G/GP`, `A/GP`, `PTS/GP`, `GC/GP`, `S/GP`, `OPS`, `DPS`, `PS`), 
+              names_from = start_year)
+
+long_misc_df <- long_misc_df %>% 
+  unnest() %>% 
+  replace(. == "NULL", NA)
+  # mutate(across(`G/GP_2023`:`PS_2016`, ~replace_na(.x, 0)))
+
+long_misc_df_exp <- long_misc_df |>
+  group_by(Player) |> 
+  summarize(ptspg_diff_23_22 = abs(`PTS/GP_2023` - `PTS/GP_2022`),
+         ptspg_diff_22_21 = abs(`PTS/GP_2022` - `PTS/GP_2021`),
+         ptspg_diff_21_20 = abs(`PTS/GP_2021` - `PTS/GP_2020`),
+         ptspg_diff_20_19 = abs(`PTS/GP_2020` - `PTS/GP_2019`),
+         ptspg_diff_19_18 = abs(`PTS/GP_2019` - `PTS/GP_2018`),
+         ptspg_diff_18_17 = abs(`PTS/GP_2018` - `PTS/GP_2017`),
+         ptspg_diff_17_16 = abs(`PTS/GP_2017` - `PTS/GP_2016`),
+         ops_diff_23_22 = abs(OPS_2023 - OPS_2022),
+         ops_diff_22_21 = abs(OPS_2022 - OPS_2021),
+         ops_diff_21_20 = abs(OPS_2021 - OPS_2020),
+         ops_diff_20_19 = abs(OPS_2020 - OPS_2019),
+         ops_diff_19_18 = abs(OPS_2019 - OPS_2018),
+         ops_diff_18_17 = abs(OPS_2018 - OPS_2017),
+         ops_diff_17_16 = abs(OPS_2017 - OPS_2016)
+         )
+```
 
 
 
 ### Advanced Statistics
 
-```{r}
-Stats_AD23.24 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD23-24.csv")
+```{r, setup, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 
-Stats_AD22.23 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD22-23.csv")
+advanced_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_23_24.csv") |> 
+  mutate(start_year = 2023)
 
-Stats_AD21.22 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD21-22.csv")
+advanced_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_22_23.csv") |> 
+  mutate(start_year = 2022)
 
-Stats_AD20.21 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD20-21.csv")
+advanced_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_21_22.csv") |> 
+  mutate(start_year = 2021)
 
-Stats_AD19.20 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD19-20.csv")
+advanced_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_20_21.csv") |> 
+  mutate(start_year = 2020)
 
-Stats_AD18.19 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD18-19.csv")
+advanced_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_19_20.csv") |> 
+  mutate(start_year = 2019)
 
-Stats_AD17.18 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD17-18.csv")
+advanced_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_18_19.csv") |> 
+  mutate(start_year = 2018)
 
-Stats_AD16.17 <- read.csv("~/Desktop/Penguins Capstone Project/Advanced Stats/Stats_AD16-17.csv")
+advanced_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_17_18.csv") |> 
+  mutate(start_year = 2017)
 
-combined_df <- rbind(Stats_AD23.24, Stats_AD22.23, Stats_AD21.22, Stats_AD20.21, Stats_AD19.20, 
-                     Stats_AD18.19, Stats_AD17.18, Stats_AD16.17)
+advanced_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_16_17.csv") |> 
+  mutate(start_year = 2016)
 ```
+
+
+```{r}
+advanced_df <- rbind(advanced_2023_24, advanced_2022_23, advanced_2021_22, advanced_2020_21,
+                     advanced_2019_20, advanced_2018_19, advanced_2017_18, advanced_2016_17)
+```
+
 
 
 ## EDAs
 
+```{r}
+library(ggplot2)
+```
+
 ### EDAs using Basic Stats
 
 
-### EDAs using Advanced Stats
+
+### EDAs using Miscellaneous Stats
 
 ```{r}
-library(ggplot2)
-library(tidyverse)
+long_misc_df_exp |> 
+  group_by(Player) |> 
+  summarise(total_ptspg_diff = sum(ptspg_diff_23_22, ptspg_diff_22_21, ptspg_diff_21_20, ptspg_diff_20_19, ptspg_diff_19_18, ptspg_diff_18_17, ptspg_diff_17_16)) |> 
+  arrange(desc(total_ptspg_diff)) |> 
+  head(n = 10) |> 
+  ggplot(aes(y = reorder(Player, total_ptspg_diff), x = total_ptspg_diff)) +
+  geom_col(fill = "purple") +
+  geom_label(aes(label = total_ptspg_diff), size = 5) +
+  theme_bw() +
+  labs(
+    x = "Total Points Per Game Difference",
+    y = "Players",
+    caption = "Data courtesy of Hockey-Reference"
+  )
+
+
+long_misc_df_exp |> 
+  group_by(Player) |> 
+  summarise(total_ops_diff = sum(ops_diff_23_22, ops_diff_22_21, ops_diff_21_20, ops_diff_20_19, ops_diff_19_18, ops_diff_18_17, ops_diff_17_16)) |> 
+  arrange(desc(total_ops_diff)) |> 
+  head(n = 10) |> 
+  ggplot(aes(y = reorder(Player, total_ops_diff), x = total_ops_diff)) +
+  geom_col(fill = "purple") +
+  geom_label(aes(label = total_ops_diff), size = 5) +
+  theme_bw() +
+  labs(
+    x = "Total Points Per Game Difference",
+    y = "Players",
+    caption = "Data courtesy of Hockey-Reference"
+  )
 ```
 
 
 ```{r}
-combined_df |> 
-  select("Player", "Pos", "CF.", "FF.", "oiSH.", "oiSV.", "oZS.", "dZS.", "Year") |> 
+# shooting percentage difference
+
+long_misc_df |>
+  group_by(Player) |> 
+  summarize(spg_diff_23_22 = abs(`S/GP_2023` - `S/GP_2022`),
+            spg_diff_22_21 = abs(`S/GP_2022` - `S/GP_2021`),
+            spg_diff_21_20 = abs(`S/GP_2021` - `S/GP_2020`),
+            spg_diff_20_19 = abs(`S/GP_2020` - `S/GP_2019`),
+            spg_diff_19_18 = abs(`S/GP_2019` - `S/GP_2018`),
+            spg_diff_18_17 = abs(`S/GP_2018` - `S/GP_2017`),
+            spg_diff_17_16 = abs(`S/GP_2017` - `S/GP_2016`),
+            total_spg_diff = sum(spg_diff_23_22, spg_diff_22_21, spg_diff_21_20, spg_diff_20_19,
+                                 spg_diff_19_18, spg_diff_18_17, spg_diff_17_16)) |> 
+  arrange(desc(total_spg_diff)) |> 
+  head(n = 10) |> 
+  ggplot(aes(y = reorder(Player, total_spg_diff), x = total_spg_diff)) +
+  geom_col(color = "grey", fill = "lightblue") +
+  geom_label(aes(label = total_spg_diff), size = 3) +
+  labs(x = "Difference in Total Shooting Percentage Per Game", y = "Players") +
+  theme_minimal()
+```
+
+
+
+### EDAs using Advanced Stats
+
+
+```{r}
+advanced_df |> 
+  select("Player", "Pos", "CF%", "FF%", "oiSH%", "oiSV%", "oZS%", "dZS%", "start_year") |> 
   filter(Player == "Jake Guentzel") |> 
-  pivot_longer(cols = c(CF., FF., oiSH., oiSV., oZS., dZS.),
-               names_to = "Metric",
+  pivot_longer(cols = c("CF%", "FF%", "oiSH%", "oiSV%", "oZS%", "dZS%"),
+               names_to = "Stats",
                values_to = "Value") |> 
-  ggplot(aes(x = Year, y = Value, color = Metric)) +
+  ggplot(aes(x = start_year, y = Value, color = Stats)) +
   geom_point(alpha = 0.6) +
   geom_smooth(se = FALSE) +
   labs(title = "Metrics Over the Years for Evgeni Malkin",
        x = "Year",
-       y = "Metric Value",
-       color = "Metric") +
-  theme_minimal()
+       y = "Stats Value",
+       color = "Stats") +
+  theme_minimal() +
+  scale_x_continuous(n.breaks = 8)
 ```
 
 
