--- a/Celine Su/Checkpoint 1 Thoughts.qmd
+++ b/Celine Su/Checkpoint 1 Thoughts.qmd
@@ -7,24 +7,62 @@ author: "Celine, Cole"
 
 ## Thoughts on measuring consistency
 
-1. Derive a consistency variable (consistency score) by calculating the differences in performance statistics across seasons; apply different weights by position. 
+1.  Derive a consistency variable (consistency score) by calculating the differences in performance statistics across seasons; apply different weights by position.
 
-2. Weight the metrics differently based on importance for each position
+2.  Weight the metrics differently based on importance for each position
 
-3. Consistency score will have more consistent players near 0 & inconsistent players much greater than 0
+3.  Consistency score will have more consistent players near 0 & inconsistent players much greater than 0
 
-4. Performance metrics must be `per game` or `per 60 minutes` to make it consistent and unbiased among player
+4.  Performance metrics must be `per game` or `per 60 minutes` to make it consistent and unbiased among player
 
+Metrics to measure consistency among forwards:
 
-## Data 
+-   Pts/gp
 
-### Basic Statistics 
+-   +/-
+
+-   Offensive point shares
+
+-   Shooting percentage / shots per game
+
+-   GF/60 (EV, PP, SH)
+
+-   Takeaways? Giveaways?
+
+-   Corsi for %? Fenwick for %?
+
+Metrics to measure consistency among defensemen:
+
+-   +/-
+
+-   Defensive point shares
+
+-   GA/60 (EV, PP, SH)
+
+-   Blocks and hits
+
+-   Takeaways? Giveaways?
+
+Metrics to measure consistency among goalies:
+
+-   Save percentage
+
+-   Goalies against average
+
+-   Quality start percentage
+
+-   Goalie point shares
+
+## Data
+
+[Hockey-reference.com](http://hockey-reference.com/)
+
+### Basic Statistics
 
 ```{r}
 library(tidyverse)
 library(broom)
 ```
-
 
 ```{r, setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
@@ -63,13 +101,11 @@ basic_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins
 
 ```
 
-
 ```{r}
 # combined basic stats
 basic_df <- rbind(basic_2023_24, basic_2022_23, basic_2021_22, basic_2020_21, basic_2021_22, 
                      basic_2020_21, basic_2019_20, basic_2018_19, basic_2017_18, basic_2016_17)
 ```
-
 
 ```{r, setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
@@ -87,8 +123,6 @@ long_basic_df <- long_basic_df %>%
 long_basic_df <- long_basic_df |> 
   unique()
 ```
-
-
 
 ### Miscellaneous Statistics
 
@@ -120,12 +154,10 @@ misc_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-
   mutate(start_year = 2016)
 ```
 
-
 ```{r}
 misc_df <- rbind(misc_2023_24, misc_2022_23, misc_2021_22, misc_2020_21, misc_2019_20,
                  misc_2018_19, misc_2017_18, misc_2016_17)
 ```
-
 
 ```{r, setup, include=FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
@@ -160,8 +192,6 @@ long_misc_df_exp <- long_misc_df |>
          )
 ```
 
-
-
 ### Advanced Statistics
 
 ```{r, setup, include=FALSE}
@@ -192,13 +222,10 @@ advanced_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Pengu
   mutate(start_year = 2016)
 ```
 
-
 ```{r}
 advanced_df <- rbind(advanced_2023_24, advanced_2022_23, advanced_2021_22, advanced_2020_21,
                      advanced_2019_20, advanced_2018_19, advanced_2017_18, advanced_2016_17)
 ```
-
-
 
 ## EDAs
 
@@ -207,8 +234,6 @@ library(ggplot2)
 ```
 
 ### EDAs using Basic Stats
-
-
 
 ### EDAs using Miscellaneous Stats
 
@@ -245,7 +270,6 @@ long_misc_df_exp |>
   )
 ```
 
-
 ```{r}
 # shooting percentage difference
 
@@ -269,10 +293,7 @@ long_misc_df |>
   theme_minimal()
 ```
 
-
-
 ### EDAs using Advanced Stats
-
 
 ```{r}
 advanced_df |> 
@@ -291,13 +312,3 @@ advanced_df |>
   theme_minimal() +
   scale_x_continuous(n.breaks = 8)
 ```
-
-
-
-
-
-
-
-
-
-
