--- a/Cole Shegan/Capstone_Code.Rmd
+++ b/Cole Shegan/Capstone_Code.Rmd
@@ -89,6 +89,52 @@ long_basic_df <- long_basic_df %>%
 
 
 ```{r}
+advanced_2023_24 <- read_csv("../Data/Advanced Stats/advanced_stats_23_24.csv") |> 
+  mutate(start_year = 2023)
+
+advanced_2022_23 <- read_csv("../Data/Advanced Stats/advanced_stats_22_23.csv") |> 
+  mutate(start_year = 2022)
+
+advanced_2021_22 <- read_csv("../Data/Advanced Stats/advanced_stats_21_22.csv") |> 
+  mutate(start_year = 2021)
+
+advanced_2020_21 <- read_csv("../Data/Advanced Stats/advanced_stats_20_21.csv") |> 
+  mutate(start_year = 2020)
+
+advanced_2019_20 <- read_csv("../Data/Advanced Stats/advanced_stats_19_20.csv") |> 
+  mutate(start_year = 2019)
+
+advanced_2018_19 <- read_csv("../Data/Advanced Stats/advanced_stats_18_19.csv") |> 
+  mutate(start_year = 2018)
+
+advanced_2017_18 <- read_csv("../Data/Advanced Stats/advanced_stats_17_18.csv") |>
+  mutate(start_year = 2017)
+
+advanced_2016_17 <- read_csv("../Data/Advanced Stats/advanced_stats_16_17.csv") |>
+  mutate(start_year = 2016)
+
+advanced_df <- rbind(advanced_2016_17, advanced_2017_18, advanced_2018_19, advanced_2019_20, advanced_2020_21, advanced_2021_22, advanced_2022_23, advanced_2023_24)
+
+advanced_df <- advanced_df |> filter(GP >= 20) |> select(Player, PlayerID, GP, `oiSH%`, `oiSV%`, PDO, TK, GV, `CF%`, `FF%`)
+```
+
+
+
+
+```{r}
+long_adv_df <- advanced_df_df |> 
+  filter(Pos != "G", GP >= 20) |> 
+  pivot_wider(id_cols = c(Player), values_from = c(GP, `oiSH%`, `oiSV%`, PDO, TK, GV, `CF%`, `FF%`), names_from = start_year)
+
+long_adv_df <- long_adv_df %>% 
+  unnest() %>% 
+  replace(. == "NULL", NA)
+```
+
+
+
+
+```{r}
 misc_2023_24 <- read_csv("../Data/Misc Stats/misc_stats_23_24.csv") |> 
   mutate(start_year = 2023)
 
@@ -112,16 +158,16 @@ misc_2017_18 <- read_csv("../Data/Misc Stats/misc_stats_17_18.csv") |>
 
 misc_2016_17 <- read_csv("../Data/Misc Stats/misc_stats_16_17.csv") |> 
   mutate(start_year = 2016)
+
+misc_df <- rbind(misc_2016_17, misc_2017_18, misc_2018_19, misc_2019_20, misc_2020_21, misc_2021_22, misc_2022_23, misc_2023_24)
+
+misc_df <- misc_df |> 
+  mutate(Pos = str_extract(Pos, "[A-Z]"))
 ```
 
 
 
 ```{r}
-misc_df <- rbind(misc_2016_17, misc_2017_18, misc_2018_19, misc_2019_20, misc_2020_21, misc_2021_22, misc_2022_23, misc_2023_24)
-
-misc_df <- misc_df |> 
-  mutate(Pos = str_extract(Pos, "[A-Z]"))
-
 num_seasons <- misc_df |> 
   filter(Pos != "G") |> 
   group_by(Player) |> 
